# rspotify-sdk

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  cli_handler.rs  lib.rs  main.rs  requests.rs  spotify_sdk.rs
src/cli/: handler.rs  mod.rs  user.rs
src/response/: album.rs  audio_features.rs  authorization.rs  mod.rs  playlist.rs  search.rs  spotify_types.rs  track.rs
src/utils/: helpers.rs  mod.rs  raxios.rs  requests.rs
