[package]
name = "rspotify-sdk"
version = "0.1.0"
authors = ["Marvin Kome <marvinkome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
env_logger="0.6"
envy = "0.4"
futures = { version = "0.3" }
log = "0.4.11"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "0.2", features = ["full"] }